--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,20 @@
 
 .App-container {
   text-align: center;
+  position: relative;
 }
 
 .App-header {
   font-family: "Space Grotesk", sans-serif, "Times New Roman", Times, serif;
+  font-size: 40px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding-top: 7.5rem;
+}
+
+.hand-image {
+  position: absolute;
+  height: 300px;
+  width: 300px;
+  left: 0;
+  transform: rotate(-180deg);
 }
